--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-    "presets": [["@babel/preset-env", {
-      "useBuiltIns": "usage",
-      "corejs": 3
-    }]]
-  }npm test
-  
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
+    ]
+  ]
+}
